# stac-auth-proxy

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  Dockerfile  Makefile  README.md  docker-compose.yaml  index.html  mkdocs.yml  objects.inv  pyproject.toml  release-please-config.json  requirements.txt  sitemap.xml
.github/workflows/: cicd.yaml  claude-pr-review.yaml  conventional-commits-prs.yaml  deploy-mkdocs.yaml  docs.yaml  mkdocs.yaml  publish-docker.yaml  publish-helm.yaml  publish-pypi.yaml  release-please.yml  security.yaml  test-helm.yaml
architecture/filtering-data/: index.html
architecture/middleware-stack/: index.html
changelog/: index.html
docs/: configuration.md  installation-and-running.md  tips.md
docs/architecture/: data-filtering.md
docs/user-guide/: configuration.md  deployment.md  getting-started.md  kubernetes.md  record-level-auth.md  route-level-auth.md  testing-auth-rules.md  tips.md
examples/: seed-db.py
examples/custom-integration/: Dockerfile  README.md  docker-compose.yaml
examples/custom-integration/src/: custom_integration.py
examples/dex/: config.yaml
examples/mock_oidc_server/: .gitignore  app.py  requirements.txt
examples/mock_oidc_server/templates/: login.html
examples/opa/: Dockerfile  README.md  docker-compose.yaml  opa_integration.py  pyproject.toml
examples/opa/policies/: example.rego
examples/opa/src/: opa_integration.py
helm/: AUTHORIZATION.md  Chart.yaml  README.md  values.example.yaml  values.schema.json  values.schema.yaml  values.yaml
helm/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml
helm/templates/tests/: test-auth.yaml  test-connection.yaml  test-service.yaml
helm/tests/: authorization_test.yaml  configmap_test.yaml  deployment_test.yaml  hpa_test.yaml
mock_oidc_server/: Dockerfile  app.py
reference/stac_auth_proxy/: index.html
reference/stac_auth_proxy/app/: index.html
reference/stac_auth_proxy/config/: index.html
reference/stac_auth_proxy/filters/: index.html
reference/stac_auth_proxy/handlers/: index.html
reference/stac_auth_proxy/lambda/: index.html
reference/stac_auth_proxy/lifespan/: index.html
reference/stac_auth_proxy/metrics/: index.html
reference/stac_auth_proxy/middleware/: index.html
reference/stac_auth_proxy/utils/: index.html
search/: search_index.json
src/stac_auth_proxy/: __init__.py  __main__.py  app.py  auth.py  config.py  handlers.py  lifespan.py  main.py  metrics.py  middleware.py  notes.md  proxy.py  signed_urls.py  utils.py
src/stac_auth_proxy/cli/: __init__.py  test_auth_rules.py
src/stac_auth_proxy/filters/: __init__.py  opa.py  scope_based_item_filter.py  template.py
src/stac_auth_proxy/guards/: __init__.py  cel.py
tests/: conftest.py  example_auth_rules.yaml  test_auth_extension.py  test_authn.py  test_cache.py  test_cli_test_auth_rules.py  test_config.py  test_configure_app.py  test_cors.py  test_cql2_build_filter_middleware.py  test_cql2_rewrite_links_filter_middleware.py  test_cql2_validate_transaction_middleware.py  test_cve_2026_48710.py  test_defaults.py  test_di.py  test_filters_jinja2.py  test_guard.py  test_guards_cel.py  test_lifespan.py  test_metrics.py  test_middleware.py  test_openapi.py  test_process_links.py  test_proxy.py  test_remove_root_path.py  test_reverse_proxy.py  test_utils.py  utils.py
tests/fixtures/: demo_searches.py
user-guide/configuration/: index.html
user-guide/deployment/: index.html
user-guide/getting-started/: index.html
user-guide/record-level-auth/: index.html
user-guide/route-level-auth/: index.html
user-guide/tips/: index.html
(+58 files in other folders)
